# cduo

./: .gitignore  AGENTS.md  ARCHITECTURE-2.0.md  Cargo.toml  LICENSE  README.ko.md  README.md  e2e-test.sh  hrns.config.json
.cargo/: config.toml
.claude/: settings.template.json
.github/workflows/: release.yml  rust-ci.yml
docs/: architecture.md  graph-routing-roadmap.md
docs/superpowers/plans/: 2026-05-15-footer-visual-polish.md
npm/: README.md  install.js  package.json
scripts/: e2e-real-agents.sh  e2e-test.sh
src/: cli.rs  cli_tests.rs  daemon.rs  hook.rs  hook_tests.rs  hook_tests_part1.rs  hook_tests_part2.rs  hook_tests_part3.rs  main.rs  message.rs  message_bus.rs  pair_router.rs  project.rs  project_doctor.rs  project_doctor_hooks.rs  project_doctor_runtime.rs  project_doctor_runtime_tests.rs  project_doctor_tests.rs  project_files.rs  project_instructions.rs  project_tests.rs  project_tests_part1.rs  project_tests_part2.rs  pty.rs  relay.rs  relay_core.rs  relay_core_discovery.rs  relay_core_io.rs  relay_core_prompt.rs  relay_core_tests.rs  session.rs  tmux.rs
src/extractors/: claude.rs  codex.rs  mod.rs
src/native/: access.rs  footer.rs  input.rs  input_tests.rs  layout.rs  mod.rs  pane.rs  relay.rs  relay_control.rs  relay_delivery.rs  relay_handlers.rs  relay_tests.rs  relay_tests_part1.rs  relay_tests_part10.rs  relay_tests_part11.rs  relay_tests_part2.rs  relay_tests_part3.rs  relay_tests_part4.rs  relay_tests_part5.rs  relay_tests_part6.rs  relay_tests_part7.rs  relay_tests_part8.rs  relay_tests_part9.rs  render.rs  render_tests.rs  runtime.rs  runtime_events.rs  runtime_io.rs  runtime_loop.rs  runtime_loop_spawn.rs  runtime_loop_support.rs  runtime_metadata.rs  runtime_mouse_events.rs  runtime_status.rs  runtime_tests.rs  runtime_tests_part1.rs  runtime_tests_part2.rs  runtime_tests_part3.rs  selection.rs  ui.rs
src/transcripts/: claude.rs  codex.rs  mod.rs
templates/: claude-settings.json  orchestration.md
