[package]
name = "cduo"
version = "2.0.7"
edition = "2021"
authors = ["hgwk"]
description = "Run Claude Code and the OpenAI Codex CLI side by side in a shared workspace"
license = "MIT"
repository = "https://github.com/hgwk/cduo"
keywords = ["claude", "codex", "ai", "terminal", "orchestration"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"
default-run = "cduo"

[[bin]]
name = "cduo"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.9"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
sha2 = "0.10"
anyhow = "1.0"
libc = "0.2"
crossterm = "0.27"
ratatui = "0.28"
vt100 = "0.15"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
tower = { version = "0.4", features = ["util"] }

[profile.release]
lto = true
opt-level = 3
strip = true
